# rust-platform-adapter

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
crates/adapter/: Cargo.toml
crates/adapter/examples/: path_demo.rs  platform_info.rs
crates/adapter/src/: api.rs  error.rs  lib.rs  types.rs
crates/adapter/src/platform/: mod.rs
crates/adapter/src/platform/android/: device.rs  mod.rs  path.rs  screen.rs
crates/adapter/src/platform/ios/: device.rs  mod.rs  path.rs  screen.rs
crates/adapter/src/platform/linux/: device.rs  mod.rs  path.rs  screen.rs
crates/adapter/src/platform/macos/: device.rs  mod.rs  path.rs  screen.rs
crates/adapter/src/platform/ohos/: device.rs  ffi.rs  mod.rs  path.rs  screen.rs
crates/adapter/src/platform/windows/: device.rs  mod.rs  path.rs  screen.rs
crates/adapter/src/traits/: device.rs  mod.rs  path.rs  screen.rs
crates/adapter/tests/: integration.rs
crates/test-app/: Cargo.toml
crates/test-app/src/: main.rs
docs/bugfix/: README.md
docs/design/: api-design.md  architecture.md  dependency-and-compilation.md  project-structure.md
docs/development/: README.md  dev-tasks.md  env-setup.md  implementation-status.md
docs/process/: commit-convention.md
docs/quality/: test-strategy.md
docs/requirements/: platform-api-research.md  v1.0-requirements.md
docs/style/: code-style.md
docs/ui/: README.md
