[package]
name = "rust-platform-adapter"
version = "0.1.0"
edition = "2021"
description = "Rust 跨平台适配层，统一接口调用各平台 Native API"
license = "MIT"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("ohos"))'] }

[dependencies]
thiserror = "2"
dirs = "6"
sysinfo = "0.34"

# Android
[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.9.0"

# iOS
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.4"
objc2-ui-kit = "0.3.2"
objc2-foundation = "0.3.2"

# macOS
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
libc = "0.2"

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Registry",
] }

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["randr"], optional = true }

[features]
default = ["x11"]
x11 = ["dep:x11rb"]

# OpenHarmony
[target.'cfg(target_os = "ohos")'.dependencies]
napi-ohos = "1.2.0"
napi-derive-ohos = "1.2.0"
